--- a/provisioning/bootstrap/project/bootstrap.yml
+++ b/provisioning/bootstrap/project/bootstrap.yml
@@ -1,7 +1,15 @@
 ---
 - hosts: controllers
+  vars:
+    ctl_username: admin
+    ctl_password: "{{ hostvars['student.jumpbox']['Lab_avi_default_password'] }}"
+    ctl_ip: "{{ hostvars[inventory_hostname]['privateIp'] }}"
+    avi_users:
+      - username: "{{ hostvars['student.jumpbox']['Lab_avi_backup_admin_username'] }}"
+        password: "{{ hostvars['student.jumpbox']['Lab_avi_backup_admin_password'] }}"
   roles:
-  - controllers
+    - avinetworks.avisdk
+    - controllers
 
 - hosts: servers
   roles:
