--- a/provisioning/bootstrap/project/roles/servers/tasks/main.yml
+++ b/provisioning/bootstrap/project/roles/servers/tasks/main.yml
@@ -31,25 +31,25 @@
   - citizenstig/dvwa
   - smarunich/avinetworks-demo
 - docker_container:
-    name: loose
+    name: avinetworks-demo
     image: smarunich/avinetworks-demo
     ports:
-    - 80:80
-    - 443:443
+     - 80:80
+     - 443:443
     detach: true
     state: started
 - docker_container:
-    name: loose
+    name: shop 
     image: bkimminich/juice-shop
     ports:
-    - 8080:3000
+     - 8080:3000
     detach: true
     state: started
 - docker_container:
-    name: moose
+    name: dvwa
     image: citizenstig/dvwa
     ports:
-    - 8081:80
+     - 8081:80
     detach: true
     state: started
     env:
