--- a/provisioning/bootstrap/project/roles/controllers/tasks/bootstrap_controller.yml
+++ b/provisioning/bootstrap/project/roles/controllers/tasks/bootstrap_controller.yml
@@ -87,6 +87,7 @@
 - name: Define AWS cloud configuration
   avi_cloud:
     avi_credentials: "{{ avi_credentials }}"
+    api_version: "{{ avi_version_again['obj']['version'] }}"  
     name: AWS
     vtype: CLOUD_AWS
     aws_configuration:
@@ -115,6 +116,20 @@
   register: subnet
   with_items:
     - "{{ hostvars['jumpbox.student.lab']['Lab_avi_vip_network'] }}"
+
+- name: Define GSLB SE Group
+  avi_serviceenginegroup:
+    avi_credentials: "{{ avi_credentials }}"
+    api_version: "{{ avi_version_again['obj']['version'] }}" 
+    name: seg_gslb01
+    cloud_ref: '/api/cloud?name=AWS'
+    algo: 'PLACEMENT_ALGO_PACKED' 
+    ha_mode: 'HA_MODE_SHARED'
+    extra_shared_config_memory: 2000
+    max_vs_per_se: 1
+    max_se: 2
+    buffer_se: 1
+    se_name_prefix: 'gslb'
 
 - name: Define DNS Virtual Service
   import_role:
@@ -145,7 +160,7 @@
           subnet_uuid: "{{ subnet['results'][0]['obj']['results'][0]['uuid'] }}"
           auto_allocate_floating_ip: true
           auto_allocate_ip: true
-
+          se_group_ref: '/api/serviceenginegroup?name=seg_gslb01' 
 - name: Define App Virtual Service
   import_role:
     name: avinetworks.aviconfig
