--- a/provisioning/bootstrap/project/roles/dns_servers/tasks/main.yml
+++ b/provisioning/bootstrap/project/roles/dns_servers/tasks/main.yml
@@ -25,6 +25,12 @@
     name: docker
     enabled: yes
     state: restarted
+- lineinfile:
+    dest: "{{ '/etc/dnsmasq.conf' }}"
+    insertafter: EOF
+    line: server=/{{hostvars[item]['gslb_domain']}}/{{hostvars[item]['dns_vs_ip']}}
+  when: hostvars[item]['Lab_Group'] == "controllers" 
+  with_inventory_hostnames: all 
 - systemd:
     name: dnsmasq
     enabled: yes
