enabling dns forwarding only for dns_server1

--- a/provisioning/bootstrap/project/roles/dns_servers/tasks/main.yml
+++ b/provisioning/bootstrap/project/roles/dns_servers/tasks/main.yml
@@ -29,7 +29,9 @@
     dest: "{{ '/etc/dnsmasq.conf' }}"
     insertafter: EOF
     line: server=/{{hostvars[item]['gslb_domain']}}/{{hostvars[item]['dns_vs_ip']}}
-  when: hostvars[item]['Lab_Group'] == "controllers" 
+  when:
+  - hostvars[item]['Lab_Group'] == "controllers"
+  - inventory_hostname == "dns_server1.lab"
   with_inventory_hostnames: all 
 - systemd:
     name: dnsmasq
