--- a/provisioning/bootstrap/project/roles/servers/tasks/main.yml
+++ b/provisioning/bootstrap/project/roles/servers/tasks/main.yml
@@ -29,18 +29,27 @@
   with_items:
   - bkimminich/juice-shop
   - citizenstig/dvwa
+  - smarunich/avinetworks-demo
 - docker_container:
-    name: loose
-    image: bkimminich/juice-shop
+    name: avinetworks-demo
+    image: smarunich/avinetworks-demo
     ports:
-    - 8080:3000
+     - 80:80
+     - 443:443
     detach: true
     state: started
 - docker_container:
-    name: moose
+    name: shop 
+    image: bkimminich/juice-shop
+    ports:
+     - 8080:3000
+    detach: true
+    state: started
+- docker_container:
+    name: dvwa
     image: citizenstig/dvwa
     ports:
-    - 8081:80
+     - 8081:80
     detach: true
     state: started
     env:
