--- a/provisioning/bootstrap/project/bootstrap.yml
+++ b/provisioning/bootstrap/project/bootstrap.yml
@@ -5,18 +5,18 @@
       controller: "{{ inventory_hostname }}"
       username: admin
       password: "{{ hostvars['jumpbox.student.lab']['Lab_avi_default_password'] }}"
-
+  
   roles:
     - avinetworks.avisdk
     - controllers
 
+- hosts: dns_servers
+  roles:
+  - dns_servers
+
 - hosts: servers
   roles:
   - servers
-
-- hosts: kalis
-  roles:
-  - kalis
 
 - hosts: jumpbox
   roles:
