fixing resolv.conf

--- a/provisioning/bootstrap/project/roles/dns_servers/tasks/main.yml
+++ b/provisioning/bootstrap/project/roles/dns_servers/tasks/main.yml
@@ -26,7 +26,11 @@
     enabled: yes
     state: restarted
 - lineinfile:
-    dest: "{{ '/etc/hosts' }}"
+    dest: /etc/resolv.conf
+    insertbefore: BOF
+    line: nameserver {{hostvars['dns_server1.lab']['privateIp']}} 
+- lineinfile:
+    dest: /etc/hosts
     regexp: "{{hostvars['dns_server2.lab']['privateIp']}} {{hostvars[item]['Lab_Name'] | regex_replace('controller','ns.local')}}"
     insertafter: EOF
     line: "{{hostvars['dns_server2.lab']['privateIp']}} {{hostvars[item]['Lab_Name'] | regex_replace('controller','ns.local')}}"
@@ -34,7 +38,7 @@
   - hostvars[item]['Lab_Group'] == "controllers"
   with_inventory_hostnames: all 
 - lineinfile:
-    dest: "{{ '/etc/dnsmasq.conf' }}"
+    dest: /etc/dnsmasq.conf
     insertafter: EOF
     line: server=/{{hostvars[item]['gslb_domain']}}/{{hostvars[item]['dns_vs_ip']}}
   when:
@@ -42,7 +46,7 @@
   - inventory_hostname == "dns_server1.lab"
   with_inventory_hostnames: all 
 - lineinfile:
-    dest: "{{ '/etc/dnsmasq.conf' }}"
+    dest: /etc/dnsmasq.conf
     insertafter: EOF
     line: server=/{{ hostvars[item]['Lab_Name'] | regex_replace('controller','local')}}/{{hostvars['dns_server2.lab']['privateIp']}}
   when:
