--- a/provisioning/bootstrap/project/bootstrap.yml
+++ b/provisioning/bootstrap/project/bootstrap.yml
@@ -1,18 +1,14 @@
 ---
-- hosts: controllers
-  vars:
-    avi_credentials:
-      controller: "{{ inventory_hostname }}"
-      username: admin
-      password: "{{ hostvars['jumpbox.student.lab']['Lab_avi_default_password'] }}"
+#- hosts: controllers
+#  vars:
+#    avi_credentials:
+#      controller: "{{ inventory_hostname }}"
+#      username: admin
+#      password: "{{ hostvars['jumpbox.student.lab']['Lab_avi_default_password'] }}"
   
-  roles:
-    - avinetworks.avisdk
-    - controllers
-
-- hosts: dns_servers
-  roles:
-  - dns_servers
+#  roles:
+#    - avinetworks.avisdk
+#    - controllers
 
 - hosts: servers
   roles:
