--- a/provisioning/bootstrap/project/roles/controllers/tasks/bootstrap_controller.yml
+++ b/provisioning/bootstrap/project/roles/controllers/tasks/bootstrap_controller.yml
@@ -1,7 +1,7 @@
 ---
 - name: "Wait for the portal to become active"
   uri:
-    url: "https://{{ inventory_hostname }}/"
+    url: "https://{{ inventory_hostname }}/api/initial-data"
     validate_certs: no
     status_code: 200
   register: result
@@ -9,43 +9,26 @@
   retries: 300
   delay: 10
 
-- name: Get Avi version information
-  avi_api_version:
-    avi_credentials: "{{ avi_credentials }}"
-  register: avi_version
-  ignore_errors: true
+- name: Refresh in-memory inventory
+  meta: refresh_inventory
+
+- name: Prepare Avi credentials
+  set_fact:
+    avi_credentials: {}
 
 - name: Prepare Avi credentials
   set_fact:
     avi_credentials: "{{ avi_credentials | combine({ item.key: item.value }) }}"
   with_items:
   - { key: 'password', value: "{{ hostvars['jumpbox.student.lab']['Lab_avi_admin_password'] }}" }
-
-- name: Prepare Avi credentials with version information if available
-  set_fact:
-    avi_credentials: "{{ avi_credentials | combine({ item.key: item.value }) }}"
-  with_items:
-  - { key: 'avi_version', value:  "{{ avi_version['obj']['version'] }}" }
-  when: avi_version is not failed
+  - { key: 'avi_version', value: "{{ result['json']['version']['Version'] }}" }
+  - { key: 'controller', value: "{{ avi_creds['controller'] }}" }
+  - { key: 'username', value: "{{ avi_creds['username'] }}" }
 
 - name: Update admin user account if required
   avi_useraccount:
     avi_credentials: "{{ avi_credentials }}"
     old_password: "{{ hostvars['jumpbox.student.lab']['Lab_avi_default_password'] }}"
-  when: avi_version is not failed
-
-- name: Get Avi version information again if required
-  avi_api_version:
-    avi_credentials: "{{ avi_credentials }}"
-  register: avi_version_again
-  when: avi_version is failed
-
-- name: Prepare Avi credentials with version information if required
-  set_fact:
-    avi_credentials: "{{ avi_credentials | combine({ item.key: item.value }) }}"
-  with_items:
-  - { key: 'avi_version', value:  "{{ avi_version_again['obj']['version'] }}" }
-  when: avi_version is failed
 
 - name: Basic system configuration
   avi_systemconfiguration:
@@ -98,14 +81,11 @@
           mgmt_network_name: "{{ hostvars['jumpbox.student.lab']['Lab_avi_management_network'] }}"
   register: cloud
 
-- name: Build dns pool details
+- name: Build server details
   set_fact:
-    dns_pool_server_ip: "{{ hostvars['dns_server2.lab']['privateIp'] }}"
-
-- set_fact:
-    app_pool_servers: "{{ app_pool_servers | default([]) + [{'port': 80 , 'ip': {'type': 'V4', 'addr': hostvars[item]['privateIp'] }}]}}"
-  when: hostvars[item]['Lab_Group'] == "servers" 
-  with_inventory_hostnames: all 
+    server_ip: "{{ hostvars[item]['privateIp'] }}"
+  with_items:
+    - "{{ inventory_hostname | regex_replace('controller', 'server') }}"
 
 - name: Build VIP network details
   avi_api_session:
@@ -116,51 +96,11 @@
   with_items:
     - "{{ hostvars['jumpbox.student.lab']['Lab_avi_vip_network'] }}"
 
-- name: Define GSLB SE Group
-  avi_serviceenginegroup:
-    avi_credentials: "{{ avi_credentials }}"
-    api_version: "{{ avi_version_again['obj']['version'] }}" 
-    name: seg_gslb01
-    cloud_ref: '/api/cloud?name=AWS'
-    algo: 'PLACEMENT_ALGO_PACKED' 
-    ha_mode: 'HA_MODE_SHARED'
-    extra_shared_config_memory: 2000
-    max_vs_per_se: 1
-    max_se: 2
-    buffer_se: 1
-    se_name_prefix: 'gslb'
-    instance_flavor: "m3.large" 
+- set_fact:
+    app_pool_servers: "{{ app_pool_servers | default([]) + [{'port': 80 , 'ip': {'type': 'V4', 'addr': hostvars[item]['privateIp'] }}]}}"
+  when: hostvars[item]['Lab_Group'] == "servers" 
+  with_inventory_hostnames: all 
 
-- name: Define DNS Virtual Service
-  import_role:
-    name: avinetworks.aviconfig
-  vars:
-    avi_credentials: "{{ avi_credentials }}"
-    avi_config:
-      pool:
-        - name: fallback_dns_pool
-          cloud_ref: '/api/cloud?name=AWS'
-          default_server_port: 53
-          servers:
-            - ip:
-                addr: "{{ dns_pool_server_ip }}"
-                type: V4
-          health_monitor_refs:
-            - '/api/healthmonitor?name=System-DNS'
-      virtualservice:
-        - name: "{{ 'vs_dns_' + hostvars['jumpbox.student.lab']['region'] }}" 
-          cloud_ref: '/api/cloud?name=AWS'
-          pool_ref: '/api/pool?name=fallback_dns_pool'
-          application_profile_ref: '/api/applicationprofile?name=System-DNS' 
-          network_profile_ref: '/api/networkprofile/?name=System-UDP-Per-Pkt'
-          services:
-            - port: 53
-            - port: 53
-              override_network_profile_ref: '/api/networkprofile/?name=System-TCP-Proxy'
-          subnet_uuid: "{{ subnet['results'][0]['obj']['results'][0]['uuid'] }}"
-          auto_allocate_floating_ip: true
-          auto_allocate_ip: true
-          se_group_ref: '/api/serviceenginegroup?name=seg_gslb01' 
 - name: Define App Virtual Service
   import_role:
     name: avinetworks.aviconfig
@@ -184,23 +124,3 @@
           subnet_uuid: "{{ subnet['results'][0]['obj']['results'][0]['uuid'] }}"
           auto_allocate_floating_ip: true
           auto_allocate_ip: true
-
-- name: Build VIP network details
-  avi_api_session:
-    avi_credentials: "{{ avi_credentials }}"
-    http_method: get
-    path: "virtualservice?include_name&services.0.port=53&fields=vip.floating_ip.addr"
-  register: dns_vip
-
-- set_fact:
-    gslb_domain: "{{ inventory_hostname | regex_replace('controller','global') }}"
-    dns_vs_ip: "{{ dns_vip['obj']['results'][0]['floating_ip']['addr'] }}"
-
-- group_by:
-    key: "{{ dns_vs_ip }}"
-- group_by:
-    key: "{{ gslb_domain }}"
-
-- debug:
-    var: hostvars[inventory_hostname]['dns_vs_ip']
-
