--- a/provisioning/bootstrap/project/roles/controllers/tasks/bootstrap_controller.yml
+++ b/provisioning/bootstrap/project/roles/controllers/tasks/bootstrap_controller.yml
@@ -162,6 +162,13 @@
           servers: '{{ app_pool_servers }}'
           health_monitor_refs:
             - '/api/healthmonitor?name=System-HTTP'
+      vsvip:
+        - name: vsvip_app
+          cloud_ref: '/api/cloud?name=AWS'
+          vip:
+            - auto_allocate_ip: true
+              subnet_uuid: "{{ subnet['results'][0]['obj']['results'][0]['uuid'] }}"
+              auto_allocate_floating_ip: true
       virtualservice:
         - name: "{{ 'vs_app_' + hostvars['jumpbox.student.lab']['region'] }}"
           cloud_ref: '/api/cloud?name=AWS'
@@ -169,9 +176,7 @@
           application_profile_ref: '/api/applicationprofile?name=System-HTTP'
           services:
             - port: 80
-          subnet_uuid: "{{ subnet['results'][0]['obj']['results'][0]['uuid'] }}"
-          auto_allocate_floating_ip: true
-          auto_allocate_ip: true
+          vsvip_ref: '/api/vsvip?name=vsvip_app'
 
 - name: Build VIP network details
   avi_api_session:
