updated to 18.2.2, adding support of evil_janitor (timezone, tags)

--- a/provisioning/bootstrap/project/roles/controllers/tasks/bootstrap_controller.yml
+++ b/provisioning/bootstrap/project/roles/controllers/tasks/bootstrap_controller.yml
@@ -112,7 +112,7 @@
     max_se: 2
     buffer_se: 1
     se_name_prefix: 'gslb'
-    instance_flavor: "m3.large"
+    instance_flavor: "t2.large"
 
 - name: Define DNS Virtual Service
   import_role:
